# xynolab-employee-management

./: .dockerignore  Dockerfile  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml
admin/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
admin/src/app/: globals.css  layout.tsx  page.tsx
admin/src/app/admin/: page.tsx
admin/src/app/admin/attendance/: page.tsx
admin/src/app/admin/employees/: page.tsx
admin/src/app/admin/salary/: page.tsx
admin/src/app/admin/users/: page.tsx
admin/src/app/employee/: page.tsx
admin/src/app/login/: page.tsx
admin/src/components/auth/: LoginForm.tsx
admin/src/components/layout/: DashboardLayout.tsx  Header.tsx  Sidebar.tsx
admin/src/components/ui/: button.tsx  card.tsx  input.tsx
admin/src/hooks/: useAuth.ts
admin/src/lib/: api.ts
admin/src/types/: index.ts
api/: .env.example  .gitignore  Makefile  README.md  alembic.ini  create_admin.py  main.py  package.json  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 23dac0fd895e_add_invitation_table.py  35be91c0eba7_initial_migration.py
api/app/: main.py
api/app/api/routes/: admin.py  attendance.py  auth.py  employees.py  invitations.py
api/app/core/: auth.py  config.py  database.py
api/app/models/: __init__.py  attendance.py  employee.py  invitation.py  salary.py  user.py
api/app/schemas/: __init__.py  attendance.py  employee.py  invitation.py  salary.py  user.py
api/app/services/: email_service.py
(+4 files in other folders)
