[project]
name = "employee-management-api"
version = "0.1.0"
description = "FastAPI Employee Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg>=3.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "pydantic[email]>=2.10.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "aiosmtplib>=3.0.1",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.0",
    "psycopg2-binary>=2.9.11",
]
